Archive2/e9/cc4d0299bc3e05/output
main.cpp: In member function 'void UtlThreadPool<Priority>::scheduler_loop()':
main.cpp:376:28: error: 'make_unique' is not a member of 'std'
             pCurrentPrty = std::make_unique<Priority>(mTasks.top().getPriority());
                            ^
main.cpp:376:53: error: expected primary-expression before '>' token
             pCurrentPrty = std::make_unique<Priority>(mTasks.top().getPriority());
                                                     ^
main.cpp:379:28: error: 'make_unique' is not a member of 'std'
             pCurrentPrty = std::make_unique<Priority>(nextTask.getPriority());
                            ^
main.cpp:379:53: error: expected primary-expression before '>' token
             pCurrentPrty = std::make_unique<Priority>(nextTask.getPriority());
                                                     ^
